--- a/italy.html
+++ b/italy.html
@@ -107,8 +107,9 @@ var svg = d3.select("#italy")
           return y(d.points); 
         }
       })
-      .attr("r", 3)
+      .attr("r", 7)
       .style("fill", "#69b3a2")
+      .style("opacity", 0.5)
     }
  );
 
