--- a/unitedstates.html
+++ b/unitedstates.html
@@ -106,8 +106,9 @@ var svg = d3.select("#theus")
           return y(d.points); 
         }
       })
-      .attr("r", 3)
+      .attr("r", 7)
       .style("fill", "#69b3a2")
+      .style("opacity", 0.5)
     }
  );
 
