--- a/france.html
+++ b/france.html
@@ -32,7 +32,7 @@ h1 {text-align: center;}
  
 <div align="center">
 <h1>France</h1>
-  
+<p>Mouse over the dots to view the types of wines ranked!</p>
 <div id="france"></div>
 <div class="pagination">
   <a href="italy.html">&laquo;</a>
@@ -61,7 +61,7 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
     .attr("class", "tooltip")
     .style("background-color", "white")
     .style("border", "solid")
-    .style("border-width", "0.5px")
+    .style("border-width", "1px")
     .style("border-radius", "3px")
 
   var mouseover = function(d) {
