--- a/france.html
+++ b/france.html
@@ -72,7 +72,7 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
   var mousemove = function(d) {
     tooltip
       .html(d.variety)
-      .style("left", (d3.mouse(this)[0]+90) + "px")
+      .style("left", (d3.mouse(this)[0]) + "px")
       .style("top", (d3.mouse(this)[1]) + "px")
   }
 
