--- a/france.html
+++ b/france.html
@@ -60,9 +60,6 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
     .style("opacity", 0)
     .attr("class", "tooltip")
     .style("background-color", "white")
-    .style("border", "solid")
-    .style("border-width", "1px")
-    .style("border-radius", "3px")
 
   var mouseover = function(d) {
     tooltip
@@ -72,8 +69,8 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
   var mousemove = function(d) {
     tooltip
       .html(d.variety)
-      .style("left", (d3.mouse(this)[0]) + "px")
-      .style("top", (d3.mouse(this)[1]) + "px")
+      .style("left", d3.mouse(this)[0])
+      .style("top", d3.mouse(this)[1])
   }
   
   var mouseleave = function(d) {
