--- a/france.html
+++ b/france.html
@@ -61,6 +61,7 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
     .attr("class", "tooltip")
     .style("background-color", "white")
     .style("color", "red")
+    .style("font-weight", "bold")
 
   var mouseover = function(d) {
     tooltip
