--- a/france.html
+++ b/france.html
@@ -63,21 +63,6 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
     .style("color", "red")
     .style("font-weight", "bold")
 
-  var mouseover = function(d) {
-    tooltip
-      .style("opacity", 1)
-  }
-
-  var mousemove = function(d) {
-    tooltip
-      .html(d.variety)
-  }
-  
-  var mouseleave = function(d) {
-    tooltip
-      .style("opacity", 0)
-  }
-
 var svg = d3.select("#france")
   .append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -132,9 +117,21 @@ var svg = d3.select("#france")
       .attr("r", 10)
       .style("fill", "#69b3a2")
       .style("opacity", 0.3)
-      .on("mouseover", mouseover )
-      .on("mousemove", mousemove )
-      .on("mouseleave", mouseleave )
+      .on("mouseover", function(d) {
+         d3.select(this).transition()
+          .duration('100')
+          .attr("r", 12)
+          tooltip
+          .style("opacity", 1)
+      })
+      .on("mousemove", function(d) {
+          tooltip
+          .html(d.variety)
+      })
+      .on("mouseleave", function(d) {
+          tooltip
+          .style("opacity", 0)
+      })
     }
  );
 
