--- a/france.html
+++ b/france.html
@@ -129,8 +129,11 @@ var svg = d3.select("#france")
           .html(d.variety)
       })
       .on("mouseleave", function(d) {
-          tooltip
-          .style("opacity", 0)
+          d3.select(this).transition()
+            .duration('200')
+            .attr("r", 10);
+            tooltip
+            .style("opacity", 0)
       })
     }
  );
