--- a/italy.html
+++ b/italy.html
@@ -55,6 +55,14 @@ d3.csv("wine-data.csv",
 var margin = {top: 10, right: 30, bottom: 40, left: 60},
     width = 460 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
+  
+var tooltip = d3.select("#france")
+    .append("div")
+    .style("opacity", 0)
+    .attr("class", "tooltip")
+    .style("background-color", "white")
+    .style("color", "red")
+    .style("font-weight", "bold")
 
 var svg = d3.select("#italy")
   .append("svg")
@@ -107,9 +115,27 @@ var svg = d3.select("#italy")
           return y(d.points); 
         }
       })
-      .attr("r", 7)
+      .attr("r", 10)
       .style("fill", "#69b3a2")
-      .style("opacity", 0.5)
+      .style("opacity", 0.3)
+        .on("mouseover", function(d) {
+         d3.select(this).transition()
+          .duration('10')
+          .attr("r", 12)
+          tooltip
+          .style("opacity", 1)
+      })
+      .on("mousemove", function(d) {
+          tooltip
+          .html(d.variety)
+      })
+      .on("mouseleave", function(d) {
+          d3.select(this).transition()
+            .duration('200')
+            .attr("r", 10);
+            tooltip
+            .style("opacity", 0)
+      })
     }
  );
 
