--- a/italy.html
+++ b/italy.html
@@ -56,7 +56,7 @@ var margin = {top: 10, right: 30, bottom: 40, left: 60},
     width = 460 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
   
-var tooltip = d3.select("#france")
+var tooltip = d3.select("#italy")
     .append("div")
     .style("opacity", 0)
     .attr("class", "tooltip")
