--- a/italy.html
+++ b/italy.html
@@ -35,6 +35,7 @@ h1 {text-align: center;}
 <h1>Italy</h1>
 
 <div id="italy"></div>
+<p>Mouse over the dots to view the variety of each ranked wine!</p>
 <div class="pagination">
   <a href="index.html">&laquo;</a>
   <a href="index.html">Introduction</a>
