--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ h1 {text-align: center;}
       })
       .attr("r", 8)
       .style("fill", "#69b3a2")
+      .style("opacity", 0.3)
     
   svg.append("g")
     .attr("class", "annotation-group")
