--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1 {text-align: center;}
   <h1>Wines Around The World:</h1>
   <p>Esteemed wine connoisseurs have ranked wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale of 0 to 100.</br>
   Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
-  Let's take a deeper dive into the data and examine the correlation for each country individually.</br>
+  Let's take a deeper dive into the data and see how wine varieties for the individual countries fare on the price-to-rating scale.</br>
   Click through the tabs of this slideshow to see the relationship between price and points per country!</br>
   </p>
 
@@ -86,8 +86,8 @@ h1 {text-align: center;}
    const annotations = [
    {
     note: {
-    label: "Most expensive wine",
-    title: "The United States",
+    label: "Highest ranked wine overall",
+    title: "Variety: Piedmont, Country: Italy",
     wrap: 150,
     align: "right"
    },
