--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ h1 {text-align: center;}
    const annotations = [
    {
     note: {
-    label: "Highest ranked wine overall",
-    title: "Variety: Piedmont, Country: Italy",
+    label: "Variety: Piedmont, Country: Italy",
+    title: "Highest ranked wine overall",
     wrap: 150,
     align: "right"
    },
