--- a/unitedstates.html
+++ b/unitedstates.html
@@ -72,14 +72,14 @@ var svg = d3.select("#theus")
           "translate(" + margin.left + "," + margin.top + ")");
 
   var x = d3.scaleLinear()
-    .domain([10, 250])
+    .domain([0, 250])
     .range([ 0, width ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
-    .domain([70, 98])
+    .domain([70, 100])
     .range([ height, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
@@ -106,7 +106,9 @@ var svg = d3.select("#theus")
     .append("circle")
       .attr("cx", function (d) {
         if (d.country==="United States") {
-          return x(d.price); 
+          if (d.price!==0){
+            return x(d.price);
+          }
         }
       })
       .attr("cy", function (d) {
