--- a/unitedstates.html
+++ b/unitedstates.html
@@ -46,6 +46,7 @@ h1 {text-align: center;}
 </div>
   
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
 
 d3.csv("wine-data.csv", 
