--- a/unitedstates.html
+++ b/unitedstates.html
@@ -49,7 +49,7 @@ h1 {text-align: center;}
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
 
-d3.csv("wine-data.csv", 
+d3.csv("wine-magazine-data.csv", 
    function(data) {
   
 var margin = {top: 10, right: 30, bottom: 40, left: 60},
