--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1 {text-align: center;}
    const annotations = [
    {
     note: {
-    label: "Variety: Piedmont, Country: Italy",
+    label: "Variety: Nebbiolo, Country: Italy",
     title: "Highest ranked wine overall",
     wrap: 150,
     align: "right"
