--- a/italy.html
+++ b/italy.html
@@ -90,7 +90,7 @@ var svg = d3.select("#italy")
    {
     note: {
     label: "Variety: Nebbiolo",
-    title: "Most expensive wine in Italy",
+    title: "Most expensive & highest ranked wine in Italy",
     wrap: 150,
     align: "right"
    },
