--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@ h1 {text-align: center;}
     y: y(97),
     dy: x(150),
     dx: y(97)
+   },
+  {
+    note: {
+    label: "Variety: Cabernet Sauvignon, Country: United States",
+    title: "Most expensive wine overall",
+    wrap: 150,
+    align: "right"
+   },
+    connector: {
+      end: "arrow"
+    },
+    color: ["red"],
+    x: x(200),
+    y: y(95),
+    dy: 220,
+    dx: 80
    }
  ]
 
