--- a/unitedstates.html
+++ b/unitedstates.html
@@ -101,6 +101,22 @@ var svg = d3.select("#theus")
     y: y(95),
     dy: 220,
     dx: 80
+   },
+   {
+    note: {
+    label: "Variety: Chardonnay",
+    title: "Highest ranked wine in the US",
+    wrap: 150,
+    align: "right"
+   },
+    connector: {
+      end: "arrow"
+    },
+    color: ["red"],
+    x: x(68),
+    y: y(96),
+    dy: 120,
+    dx: 80
    }
  ]
 
