--- a/unitedstates.html
+++ b/unitedstates.html
@@ -40,8 +40,8 @@ h1 {text-align: center;}
   <a href="italy.html">Italy</a>
   <a href="france.html">France</a>
   <a class="active" href="unitedstates.html">The United States</a>
-  <a href="#">Conclusion</a>
-  <a href="#">&raquo;</a>
+  <a href="conclusion.html">Conclusion</a>
+  <a href="conclusion.html">&raquo;</a>
 </div>
 </div>
   
