--- a/france.html
+++ b/france.html
@@ -40,7 +40,7 @@ h1 {text-align: center;}
   <a href="italy.html">Italy</a>
   <a class="active" href="france.html">France</a>
   <a href="unitedstates.html">The United States</a>
-  <a href="#">Conclusion</a>
+  <a href="conclusion.html">Conclusion</a>
   <a href="unitedstates.html">&raquo;</a>
 </div>
 </div>
