--- a/conclusion.html
+++ b/conclusion.html
@@ -32,6 +32,15 @@ h1 {text-align: center;}
 
 <div align="center">
 <h1>Conclusion</h1>
+<div class="pagination">
+  <a href="unitedstates.html">&laquo;</a>
+  <a href="index.html">Introduction</a>
+  <a href="italy.html">Italy</a>
+  <a class="active" href="france.html">France</a>
+  <a href="unitedstates.html">The United States</a>
+  <a href="conclusion.html">Conclusion</a>
+  <a href="#">&raquo;</a>
+</div>
 </div>
 
 </body>
