--- a/conclusion.html
+++ b/conclusion.html
@@ -36,9 +36,9 @@ h1 {text-align: center;}
   <a href="unitedstates.html">&laquo;</a>
   <a href="index.html">Introduction</a>
   <a href="italy.html">Italy</a>
-  <a class="active" href="france.html">France</a>
+  <a href="france.html">France</a>
   <a href="unitedstates.html">The United States</a>
-  <a href="conclusion.html">Conclusion</a>
+  <a class="active" href="conclusion.html">Conclusion</a>
   <a href="#">&raquo;</a>
 </div>
 </div>
