--- a/conclusion.html
+++ b/conclusion.html
@@ -32,6 +32,10 @@ h1 {text-align: center;}
 
 <div align="center">
 <h1>Conclusion</h1>
+<p>What can we gather from these scatterplots?</br>
+Based on the direction of the dots for all three countries, there is a generally positive correlation between price and ranking,</br>
+i.e., the greater the price, the higher the ranking.</p>
+
 <div class="pagination">
   <a href="unitedstates.html">&laquo;</a>
   <a href="index.html">Introduction</a>
