--- a/conclusion.html
+++ b/conclusion.html
@@ -35,12 +35,14 @@ h1 {text-align: center;}
 <p>What can we gather from these scatterplots?</br>
 Based on the direction of the dots for all three countries, there is a logarithmic positive correlation between price and ranking,</br>
 i.e., the greater the price, the higher the ranking, but after a certain threshold price for each country, rankings plateau.</br>
+<div align="left">
 <b>Italy: </b>
 <ul> 
   <li>The most expensive wine is also the highest ranked.</li>
   <li>Nebbiolo wines tend to have both the lowest and highest rankings.</li>
   <li>The cheapest wine is also the lowest ranked (Pinot Noir).</li>
 </ul>
+</div>
 </p>
 
 <div class="pagination">
