--- a/conclusion.html
+++ b/conclusion.html
@@ -42,6 +42,12 @@ i.e., the greater the price, the higher the ranking, but after a certain thresho
   <li>Nebbiolo wines tend to have both the lowest and highest rankings.</li>
   <li>The cheapest wine is also the lowest ranked (Pinot Noir).</li>
 </ul>
+<b>France: </b>
+<ul>
+  <li>Both the most expensive and highest ranked wines are of variety Chardonnay, but from different wineries.</li>
+  <li>The lowest ranked wine is a Zinfandel.</li>
+  <li>The cheapest wine is also a Chardonnay.</li>
+</ul>
 </div>
 </p>
 
