--- a/conclusion.html
+++ b/conclusion.html
@@ -48,6 +48,12 @@ i.e., the greater the price, the higher the ranking, but after a certain thresho
   <li>The lowest ranked wine is a Zinfandel.</li>
   <li>The cheapest wine is also a Chardonnay.</li>
 </ul>
+<b>The United States:</b>
+<ul>
+  <li>The most expensive wines are Cabernet Sauvignons in the US.</li>
+  <li>The lowest ranked wine is a Zinfandel, just like France.</li>
+  <li>The cheapest wine is a Viognier.</li>
+</ul>
 </div>
 </p>
 
