--- a/conclusion.html
+++ b/conclusion.html
@@ -33,8 +33,9 @@ h1 {text-align: center;}
 <div align="center">
 <h1>Conclusion</h1>
 <p>What can we gather from these scatterplots?</br>
-Based on the direction of the dots for all three countries, there is a logarithmic positive correlation between price and ranking,</br>
-i.e., the greater the price, the higher the ranking, but after a certain threshold price for each country, rankings plateau.</br>
+  Based on the direction of the dots for all three countries, there is a logarithmic positive correlation between price and ranking,</br>
+  i.e., the greater the price, the higher the ranking, but after a certain threshold price for each country, rankings plateau.</br>
+</p>
 <div align="left">
 <b>Italy: </b>
 <ul> 
@@ -55,6 +56,11 @@ i.e., the greater the price, the higher the ranking, but after a certain thresho
   <li>The cheapest wine is a Viognier.</li>
 </ul>
 </div>
+<div align="right">
+<p>All three countries have similar slopes in the way the dots form on their scatterplots.</br>
+  Many varieties of wines fall all over the ranking scale - meaning that wineries that produce the same varieties differ in quality.</br>
+  In the future, we can explore the individual wineries to gather more information about our wines!</br>
+  Which wine are you most interested to try, and from where?
 </p>
 
 <div class="pagination">
