--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h1 {text-align: center;}
 <body>
 
 <div align="center">
-  <h1>Wines Around The World:</h1>
+  <h1>Wines Around The World</h1>
   <p>Esteemed wine connoisseurs have ranked wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale of 0 to 100.</br>
   Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
   Let's take a deeper dive into the data and see how wine varieties from the individual countries fare on the price-to-rating scale.</br>
