--- a/conclusion.html
+++ b/conclusion.html
@@ -57,7 +57,8 @@ h1 {text-align: center;}
 </ul>
 </div>
 <div align="right">
-<p>All three countries have similar slopes in the way the dots form on their scatterplots.</br>
+<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
+  All three countries have similar slopes in the way the dots form on their scatterplots.</br>
   Many varieties of wines fall all over the ranking scale - meaning that wineries that produce the same varieties differ in quality.</br>
   In the future, we can explore the individual wineries to gather more information about our wines!</br>
   Which wine are you most interested to try, and from where?
