--- a/italy.html
+++ b/italy.html
@@ -102,6 +102,22 @@ var svg = d3.select("#italy")
     y: y(97),
     dy: x(150),
     dx: y(97)
+   },
+   {
+    note: {
+    label: "Datapoint will be discounted",
+    title: "Outlier data: wine should not be $0!",
+    wrap: 150,
+    align: "right"
+   },
+    connector: {
+      end: "arrow"
+    },
+    color: ["red"],
+    x: x(0),
+    y: y(100),
+    dy: 100,
+    dx: 0
    }
  ]
 
