--- a/unitedstates.html
+++ b/unitedstates.html
@@ -117,6 +117,22 @@ var svg = d3.select("#theus")
     y: y(96),
     dy: 190,
     dx: 120
+   },
+   {
+    note: {
+    label: "Datapoint will be discounted",
+    title: "Outlier data: wine should not be $0!",
+    wrap: 150,
+    align: "right"
+   },
+    connector: {
+      end: "arrow"
+    },
+    color: ["red"],
+    x: x(0),
+    y: y(100),
+    dy: 300,
+    dx: 250
    }
  ]
 
