--- a/italy.html
+++ b/italy.html
@@ -105,7 +105,7 @@ var svg = d3.select("#italy")
    },
    {
     note: {
-    label: "Datapoint will be discounted",
+    label: "Datapoint will be discounted; applies to other charts too",
     title: "Outlier data: wine should not be $0!",
     wrap: 150,
     align: "right"
