--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div align="center">
         <h1>Wines Around The World</h1>
           <p>Esteemed wine connoisseurs have ranked fine wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale up to 100.</br>
-            Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
+            Below is a scatterplot showing the relationship between price and quality ranking for all three countries combined.</br>
             Let's take a deeper dive into the data and see how wine varieties from the individual countries fare on the price-to-rating scale.</br>
             Click through the tabs of this slideshow to see the relationship between price and points per country!</br>
           </p>
