--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="conclusion.html">Conclusion</a>
           <a href="italy.html">&raquo;</a>
         </div>
-        <a href="https://musicalmaya12.github.io/narrativeVisualization/">Link to the code used to make this site</a>
+        <a href="https://github.com/musicalmaya12/narrativeVisualization">Link to the code used to make this site</a>
       </div>
 
       <script src="https://d3js.org/d3.v4.min.js"></script>
